...
      'defaultCurrency': 'Moeda padrão',
      'currencyOnLeft': 'Moeda à esquerda',
      'enterDefaultCurrency': 'Digite moeda predefinida',
      'submit': 'Enviar',
    },
    'en': <String, String>{
      'addTransaction': 'Add transaction',
      'date': 'Date',
      'description': 'Description',
      'account': 'Account',
      'enterADate': 'Enter a date.',
      'tryRFC3339': 'Try RFC 3339.',
      'enterADescription': 'Enter a description.',
      'enterAnAccount': 'Enter an account',
      'enterAnAmount': 'Enter an amount',
      'secondEmptyAmount': 'Second empty amount',
      'settings': 'Settings',
      'defaultCurrency': 'Default Currency',
      'currencyOnLeft': 'Currency on left',
      'enterDefaultCurrency': 'Enter default currency',
      'submit': 'Submit',
    },
    'es': <String, String>{
...
