...
    final SharedPreferences prefs = Provider.of<SharedPreferences>(context);

    if (prefs == null) {
      return MaterialApp(
        home: Scaffold(
          appBar: AppBar(
            title: const Text('cone'),
          ),
          body: const Center(
            child: CircularProgressIndicator(),
          ),
        ),
      );
...
